--- a/Blog Theme/blogtheme.css
+++ b/Blog Theme/blogtheme.css
@@ -61,17 +61,18 @@ body .wrapper .update .update-date {
 
 body .wrapper .navbar {
   margin: 0 2%;
-  width: 100;
-  height: 50px;
+  width: 350px;
+  height: 80px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
 }
 
 body .wrapper .navbar > a {
@@ -92,21 +93,23 @@ body .wrapper #home {
 
 body .wrapper #home .blog-name {
   height: 100%;
-  width: 25%;
+  width: 350px;
   -webkit-writing-mode: vertical-rl;
       -ms-writing-mode: tb-rl;
           writing-mode: vertical-rl;
   text-orientation: sideways;
   letter-spacing: 0px;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   font-family: var(--accent-font);
   font-size: 6vh;
   -webkit-user-select: none;
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
+}
+
+body .wrapper #home [class*="pane"] {
+  height: 100%;
+  width: 25%;
 }
 
 @-webkit-keyframes bg-scrolling-reverse {
