--- a/Blog Theme/blogtheme.scss
+++ b/Blog Theme/blogtheme.scss
@@ -59,10 +59,11 @@ body {
 
         .navbar {
             margin: 0 2%;
-            width: 100; height: 50px;
+            width: 350px; height: 80px;
             display: flex;
+            flex-wrap: wrap;
             align-items: center;
-            justify-content: flex-start;
+            justify-content: space-around;
 
             & > a {
                 margin-right: 2%;
@@ -79,15 +80,20 @@ body {
             display: flex;
 
             .blog-name {
-                height: 100%; width: 25%;
+                height: 100%; width: 350px;
                 writing-mode: vertical-rl;
                 text-orientation: sideways;
                 letter-spacing: 0px;
-                justify-content: center;
                 font-family: var(--accent-font);
                 font-size: 6vh;
                 user-select: none;
             }
+
+            [class*="pane"] {
+                height:100%; width: 25%;
+            }
+
+
         }
     }
 }
