--- a/blog-theme/blogtheme.css
+++ b/blog-theme/blogtheme.css
@@ -4,6 +4,7 @@
 * {
   margin: 0;
   padding: 0;
+  border: 1px solid cyan;
 }
 
 :root {
@@ -12,6 +13,8 @@
   --main-brand-color: #D47163;
   --dark-accent: #95464C;
   --dark-shade: #2D3343;
+  --white-space: #fefefe;
+  --black-space: #0f0f0f;
   --main-font: 'Inter', sans-serif;
   --accent-font: 'Playfair Display', serif;
   --credit-font: 'Libre Barcode 39 Text', cursive;
@@ -44,7 +47,7 @@ body .wrapper .update {
   display: -ms-grid;
   display: grid;
   place-items: center;
-  text-align: justify;
+  text-align: center;
   text-transform: capitalize;
   background-color: var(--light-accent);
   color: var(--light-shade);
@@ -59,10 +62,16 @@ body .wrapper .update .update-date {
   color: var(--dark-shade);
 }
 
+body .wrapper .update > p {
+  text-align: justify;
+}
+
 body .wrapper .navbar {
-  margin: 0 2%;
-  width: 350px;
-  height: 80px;
+  position: absolute;
+  right: 0px;
+  margin: 2% 0;
+  width: 100%;
+  height: 40px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -73,11 +82,12 @@ body .wrapper .navbar {
           align-items: center;
   -ms-flex-pack: distribute;
       justify-content: space-around;
+  z-index: 9;
 }
 
 body .wrapper .navbar > a {
   margin-right: 2%;
-  font-size: 1.2vw;
+  font-size: 2vw;
   color: var(--dark-shade);
 }
 
@@ -86,30 +96,103 @@ body .wrapper .navbar > a:hover {
 }
 
 body .wrapper #home {
+  width: 100vw;
+  height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
 body .wrapper #home .blog-name {
-  height: 100%;
-  width: 350px;
+  margin: 0%;
+  height: 95%;
+  width: 15%;
+  float: left;
+  display: -ms-grid;
+  display: grid;
+  place-items: center;
+}
+
+body .wrapper #home .blog-name > h1 {
   -webkit-writing-mode: vertical-rl;
       -ms-writing-mode: tb-rl;
           writing-mode: vertical-rl;
   text-orientation: sideways;
-  letter-spacing: 0px;
+  text-transform: capitalize;
+  text-align: center;
   font-family: var(--accent-font);
-  font-size: 6vh;
+  font-size: 7vh;
   -webkit-user-select: none;
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
 }
 
-body .wrapper #home [class*="pane"] {
-  height: 100%;
-  width: 25%;
+body .wrapper #home .left-pane {
+  margin: 0;
+  height: 95%;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  place-items: center;
+  float: left;
+}
+
+body .wrapper #home .left-pane .btn-container {
+  margin: 10%;
+  width: 100%;
+  height: 60%;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+  place-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+body .wrapper #home .left-pane .btn-container a {
+  margin: 15px;
+  width: 95%;
+  height: 95%;
+  border-radius: 25px;
+  background-color: var(--dark-accent);
+  color: var(--light-shade);
+  display: -ms-grid;
+  display: grid;
+  place-items: center;
+  font-weight: 300;
+  font-size: 1.8vw;
+  text-transform: uppercase;
+  text-decoration: none;
+}
+
+body .wrapper #home .left-pane .btn-container a:hover {
+  background-color: var(--light-shade);
+  color: var(--dark-accent);
+  border: 1px solid var(--dark-accent);
+}
+
+body .wrapper #home .left-pane .project {
+  margin: auto 5%;
+  width: 50%;
+  height: 50%;
+  display: -ms-grid;
+  display: grid;
+  place-items: center;
+}
+
+body .wrapper #home .left-pane .project .project-name a {
+  margin: 20% 5%;
+  color: var(--dark-accent);
+  text-transform: uppercase;
+  text-align: center;
+  text-decoration: none;
+  font-weight: 900;
+  font-size: 1.8vw;
+  display: inline-block;
+  word-wrap: wrap;
 }
 
 @-webkit-keyframes bg-scrolling-reverse {
