--- a/blog-theme/blogtheme.scss
+++ b/blog-theme/blogtheme.scss
@@ -9,6 +9,7 @@ $bg-height: 50px;
 
 * {
     margin: 0; padding:0;
+    border: 1px solid cyan;
 }
 
 :root {
@@ -17,6 +18,10 @@ $bg-height: 50px;
     --main-brand-color: #D47163;
     --dark-accent: #95464C;
     --dark-shade: #2D3343;
+
+    --white-space: #fefefe;
+    --black-space: #0f0f0f;
+
 
     --main-font: 'Inter', sans-serif;
     --accent-font: 'Playfair Display', serif;
@@ -45,7 +50,7 @@ body {
             width: 100%; height: 50px;
             display: grid;
             place-items: center;
-            text-align: justify;
+            text-align: center;
             text-transform: capitalize;
             background-color: var(--light-accent);
             color: var(--light-shade);
@@ -55,19 +60,26 @@ body {
                 margin-right: 1vh;
                 color: var(--dark-shade);
             }
+
+            & > p {
+                text-align: justify;
+            }
         }
 
         .navbar {
-            margin: 0 2%;
-            width: 350px; height: 80px;
+            position: absolute;
+            right: 0px;
+            margin: 2% 0;
+            width: 100%; height: 40px;
             display: flex;
             flex-wrap: wrap;
             align-items: center;
             justify-content: space-around;
+            z-index: 9;
 
             & > a {
                 margin-right: 2%;
-                font-size: 1.2vw;
+                font-size: 2vw;
                 color: var(--dark-shade);
 
                 &:hover {
@@ -77,23 +89,84 @@ body {
         }
 
         #home {
+            width:100vw; height: 100vh;
             display: flex;
-
+            
             .blog-name {
-                height: 100%; width: 350px;
-                writing-mode: vertical-rl;
-                text-orientation: sideways;
-                letter-spacing: 0px;
-                font-family: var(--accent-font);
-                font-size: 6vh;
-                user-select: none;
+                margin: 0%;
+                height: 95%; width: 15%;
+                float: left;
+                display: grid;
+                place-items: center;
+
+                & > h1 {
+                    writing-mode: vertical-rl;
+                    text-orientation: sideways;
+                    text-transform: capitalize;
+                    text-align: center;
+                    font-family: var(--accent-font);
+                    font-size: 7vh;
+                    user-select: none;
+                }
             }
+            .left-pane {
+                margin: 0;
+                height:95%; width: 100%;
+                display: flex;
+                place-items: center;
+                float: left;
 
-            [class*="pane"] {
-                height:100%; width: 25%;
+                .btn-container {
+                    margin: 10%;
+                    width: 100%; height: 60%;
+                    
+                    display: grid;
+                    grid-template-columns: 1fr 1fr;
+                    place-items: center;
+                    justify-content: space-around;
+
+                    a {
+                        margin: 15px;
+                        width: 95%; height: 95%;
+                        border-radius: 25px;
+                        background-color: var(--dark-accent);
+                        color: var(--light-shade);
+                        display: grid;
+                        place-items: center;
+                        font-weight: 300;
+                        font-size: 1.8vw;
+                        text-transform: uppercase;
+                        text-decoration: none;
+
+                        &:hover {
+                            background-color: var(--light-shade);
+                            color: var(--dark-accent);
+                            border: 1px solid var(--dark-accent);
+                        }
+                    }
+                }
+
+                .project {
+                    margin: auto 5%;
+                    width: 50%; height: 50%;
+                    display: grid;
+                    place-items: center;
+                    .project-name {  
+                        
+                        a { 
+                            margin: 20% 5%;
+                            color: var(--dark-accent);
+                            text-transform: uppercase;
+                            text-align: center;
+                            text-decoration: none;
+                            font-weight: 900;
+                            font-size: 1.8vw;
+                            display: inline-block;
+                            word-wrap: wrap;
+                        }
+                    }
+                }
             }
-
-
         }
     }
 }
